--- a/CloudWeather.DataLoader/CloudWeather.DataLoader.csproj
+++ b/CloudWeather.DataLoader/CloudWeather.DataLoader.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
-
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
